5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1573_2896.log
== TEST (2019-03-25 15:35:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(python)

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(python)
NameError: name 'python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:35:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(python)

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.170628
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 4, in <module>
    var = input(python)
NameError: name 'python' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:35:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Preco)

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Preco)
NameError: name 'Preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:35:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Preco)

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Preco)
NameError: name 'Preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:35:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Preco)

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.14617
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 4, in <module>
    var = input(Preco)
NameError: name 'Preco' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:37:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(code)

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(code)
NameError: name 'code' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(code)

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.141991
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 4, in <module>
    var = input(code)
NameError: name 'code' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:38:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: code")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:38:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Digite o nome: code")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.148861
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
